kubernetes/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: flowfuse-npm-registry
spec:
  selector:
    matchLabels:
      app: flowfuse-npm-registry
  serviceName: flowfuse-npm-registry
  replicas: 1
  template:
    metadata:
      labels:
        app: flowfuse-npm-registry
    spec:
      containers:
      - name: flowfuse-npm-registry
        image: containers.hardill.me.uk/flowfuse/flowfuse-npm-registry
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4873
        volumeMounts:
        - name: storage
          mountPath: /verdaccio/storage
        - name: config
          mountPath: /verdaccio/conf
      volumes:
      - name: config
        configMap:
          name: flowfuse-npm-registry
      - name: storage
        persistentVolumeClaim:
          claimName: flowfuse-npm-registry
  volumeClaimTemplates:
  - metadata:
      name: flowfuse-npm-registry
    spec:
      accessModes:
      - ReadWriteOnce
      volumeMode: Filesystem
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: flowfuse-npm-registry
spec:
  clusterIp: none
  selector:
    app: flowfuse-npm-registry
  ports:
  - port: 4873
    targetPort: 4873
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowfuse-npm-registry
  labels:
    name: flowfuse-npm-registry
spec:
  rules:
  - host: registry.flowforge.loc
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flowfuse-npm-registry
            port: 
              number: 4873
